wil-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-app
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: wil-app
  template:
    metadata:
      labels:
        app: wil-app
    spec:
      containers:
      - image: wil42/playground:v1
        name: wil-app
        ports:
        - containerPort: 8888
