wil-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wil-app
  name: wil-app-svc
spec:
  ports:
  - name: 8888-8888
    nodePort: 30080
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: wil-app
  type: NodePort
