will-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-app
spec:
  ports:
  - port: 8888
    targetPort: 8888
  selector:
    app: wil-app
