wil-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wil-app-ingress
spec:
  rules:
  - host: wil.app.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wil-app-svc
            port:
              number: 8888
